--- a/page.html
+++ b/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,37 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Practice Assignment 1</title>
+    <!--CTEC 126-->
+    <!--Jessica Phan-->
+    <!--Practice Assignment 1 -->
+    <!--04/10/2019-->
 </head>
 <body>
 
+    <!-- jQuery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Your JavaScript goes here -->
 
+    <script>
+        alert("ALERT ALERT ALERT");
+    </script>
 
-<!-- jQuery -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-<!-- Your JavaScript goes here -->
+    <h2>About Me</h2>
+    <p>Hello, and welcome to <b><i>The Page</i></b>. My name is Jessica and I am currently learning to be a Web Devloper at Clark College. I have been here for about 3 years ever since I started during my senior year in high school. I'm pretty happy of how far I came, and learned a lot web development at Clark College. Bruce and Bob will be you BFF in the program.</p>
+
+    <h2>What to Accomplish</h2>
+    <p>What I want to accomplish in this class is to figure out what makes JavaScript important; why and how it became to what it is known for today. Knowing that Javascript is nearly everywhere today makes me want to go in-depth and learn something new to increase my skills.</p>
+
+    <h2>Programming Skills/Languages</h2>
+    <p>I'm unsure where I land as of for programming skils wise... but down below are a few programming languages that I know. As of right now, I don't really have a current favorite programming language, but so far I'm sort of liking Javascript.</p> 
+        <ul>
+            <li>SQL</li>
+            <li>PHP(semi)</li>
+            <li>C#(semi)</li>
+        </ul>
+
 
 </body>
 </html>
