--- a/page.html
+++ b/page.html
@@ -34,6 +34,8 @@
     <h2>Programming Skills/Languages</h2>
     <p>I'm unsure where I land as of for programming skils wise... but down below are a few programming languages that I know. As of right now, I don't really have a current favorite programming language, but so far I'm sort of liking Javascript.</p> 
         <ul>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>SQL</li>
             <li>PHP(semi)</li>
             <li>C#(semi)</li>
